<resources>
    <string name="app_name">SettingPage</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="night_mode">Night Mode</string>
    <string name="notification">Notification</string>
    <string name="private_account">Private Account</string>
    <string name="security_and_privacy">Security and Privacy</string>
    <string name="text_size">Text Size</string>
    <string name="faqs">FAQs</string>
    <string name="todo">TODO</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
</resources>